--- a/src/index.css
+++ b/src/index.css
@@ -12,10 +12,10 @@ body {
 
 h1 {
   font-size: 2.5rem;
-  color: #2c292b;
+  color: #5c043e;
 }
 
 h2 {
   font-size: 1.5rem;
-  color: #2c292b;
+  color: #f1071a;
 }
