--- a/src/components/layout/MainNavigation/MainNavigation.module.css
+++ b/src/components/layout/MainNavigation/MainNavigation.module.css
@@ -3,7 +3,7 @@
   height: 5rem;
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: space-evenly;
   background-color: #77002e;
   padding: 0 10%;
 }
